--- a/web2.css
+++ b/web2.css
@@ -1,14 +1,14 @@
 /* The navbar container */
 .topnav {
     overflow: hidden;
-    background-color: #333;
+    background-color: black;
 }
 
 /* Navbar links */
 .topnav a {
     float: left;
     display: block;
-    color: #f2f2f2;
+    text color: white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
