--- a/web2.css
+++ b/web2.css
@@ -22,6 +22,6 @@
 
 <div class="topnav">
   <a href="#">Home</a>
-  <a href="#">Hobbies/Sports</a>
+  <a href="https://cmclements19.github.io/second-website/web2.html">Hobbies/Sports</a>
   <a href="#">Early Life</a>
 </div>
