--- a/web2.css
+++ b/web2.css
@@ -23,5 +23,5 @@
 <div class="topnav">
   <a href="#">Home</a>
   <a href="https://cmclements19.github.io/second-website/web2.html">Hobbies/Sports</a>
-  <a href="#">Early Life</a>
+  <a href="https://cmclements19.github.io/second-website/web3.html">Early Life</a>
 </div>
