--- a/web2.css
+++ b/web2.css
@@ -21,7 +21,7 @@
 }
 
 <div class="topnav">
-  <a href="#">Home</a>
+  <a href="https://cmclements19.github.io/second-website/index.html">Home</a>
   <a href="https://cmclements19.github.io/second-website/web2.html">Hobbies/Sports</a>
   <a href="https://cmclements19.github.io/second-website/web3.html">Early Life</a>
 </div>
