--- a/web2.css
+++ b/web2.css
@@ -1,24 +1,33 @@
-/* The navbar container */
-.topnav {
-    overflow: hidden;
-    background-color: black;
+/* Style the header */
+.header {
+    background-color: #f1f1f1;
+    padding: 20px;
+    text-align: center;
 }
 
-/* Navbar links */
+/* Style the top navigation bar */
+.topnav {
+    overflow: hidden;
+    background-color: #333;
+}
+
+/* Style the topnav links */
 .topnav a {
     float: left;
     display: block;
-    text color: white;
+    color: #f2f2f2;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
 }
 
-/* Links - change color on hover */
+/* Change color on hover */
 .topnav a:hover {
     background-color: #ddd;
     color: black;
 }
+</style>
+</head>
 
 <div class="topnav">
   <a href="https://cmclements19.github.io/second-website/index.html">Home</a>
