--- a/web2.css
+++ b/web2.css
@@ -1,6 +1,6 @@
 /* Style the header */
 .header {
-    background-color: #f1f1f1;
+    background-color: #black;
     padding: 20px;
     text-align: center;
 }
@@ -8,14 +8,14 @@
 /* Style the top navigation bar */
 .topnav {
     overflow: hidden;
-    background-color: #333;
+    background-color: #black;
 }
 
 /* Style the topnav links */
 .topnav a {
     float: left;
     display: block;
-    color: #f2f2f2;
+    color: #white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -23,7 +23,7 @@
 
 /* Change color on hover */
 .topnav a:hover {
-    background-color: #ddd;
+    background-color: #black;
     color: black;
 }
 </style>
