--- a/web2.css
+++ b/web2.css
@@ -34,3 +34,15 @@
   <a href="https://cmclements19.github.io/second-website/web2.html">Hobbies/Sports</a>
   <a href="https://cmclements19.github.io/second-website/web3.html">Early Life</a>
 </div>
+.footer {
+    background-color: #F1F1F1;
+    text-align: center;
+    padding: 10px;
+}
+<div class="footer">
+  <p>Clay Clements - Period 2 - Advanced Website</p>
+</div>
+
+
+
+
