--- a/web2.css
+++ b/web2.css
@@ -34,6 +34,25 @@
   <a href="https://cmclements19.github.io/second-website/web2.html">Hobbies/Sports</a>
   <a href="https://cmclements19.github.io/second-website/web3.html">Early Life</a>
 </div>
+/* Create three equal columns that floats next to each other */
+.column {
+    float: left;
+    width: 33.33%;
+}
+
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+/* Responsive layout - makes the three columns stack on top of each other instead of next to each other on smaller screens (600px wide or less) */
+@media screen and (max-width: 600px) {
+    .column {
+        width: 100%;
+    }
+}
 .footer {
     background-color: #F1F1F1;
     text-align: center;
