--- a/web2.css
+++ b/web2.css
@@ -31,8 +31,8 @@
 
 <div class="topnav">
   <a href="https://cmclements19.github.io/second-website/index.html">Home</a>
-  <a href="https://cmclements19.github.io/second-website/web2.html">Hobbies/Sports</a>
-  <a href="https://cmclements19.github.io/second-website/web3.html">Early Life</a>
+  <a href="https://cmclements19.github.io/second-website/web2.html">Hobbies</a>
+  <a href="https://cmclements19.github.io/second-website/web3.html">Sports</a>
 </div>
 
 .footer {
